# openvmm

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: CODEOWNERS  copilot-instructions.md  labeler.yml
.github/scripts/refresh_mirror/: refresh-mirror.py
.github/skills/fuzzing/: SKILL.md
.github/skills/openvmm-ci-investigation/: SKILL.md
.github/skills/vmm-tests/: SKILL.md
.github/workflows/: openvmm-ci.yaml  openvmm-docs-ci.yaml  openvmm-docs-pr.yaml  openvmm-pr-release.yaml  openvmm-pr.yaml  refresh-mirror.yml
Guide/src/: SUMMARY.md
build_support/: setup_windows_cross.sh
ci-flowey/: openvmm-pr.yaml
flowey/flowey/src/: lib.rs
flowey/flowey_core/src/: node.rs  pipeline.rs
flowey/flowey_hvlite/: Cargo.toml
flowey/flowey_lib_common/: Cargo.toml
flowey/flowey_lib_common/src/: git_checkout.rs  lib.rs  publish_test_results.rs  run_cargo_build.rs  run_cargo_nextest_run.rs  system_info.rs
flowey/flowey_lib_hvlite/: Cargo.toml
flowey/flowey_lib_hvlite/src/: build_hypestv.rs  build_igvmfilegen.rs  build_incubator.rs  build_nextest_unit_tests.rs  build_ohcldiag_dev.rs  build_openhcl_boot.rs  build_openhcl_igvm_from_recipe.rs  build_openvmm.rs  build_openvmm_hcl.rs  build_pipette.rs  build_prep_steps.rs  build_sidecar.rs  build_test_igvm_agent_rpc_server.rs  build_tmk_vmm.rs  build_tpm_guest_tests.rs  build_vmfirmwareigvm_dll.rs  build_vmgstool.rs  build_xtask.rs  common.rs  git_checkout_openvmm_repo.rs  init_cross_build.rs  init_hyperv_tests.rs  init_vmm_tests_env.rs  install_vmm_tests_deps.rs  lib.rs  resolve_openvmm_qemu.rs  run_cargo_build.rs  run_cargo_nextest_run.rs  run_igvmfilegen.rs  run_split_debug_info.rs  write_incubator_target_runner.rs
nix/: openhcl_kernel.nix  openvmm_deps.nix  uefi_mu_msvm.nix
openhcl/diag_client/src/: lib.rs
openhcl/diag_server/src/: diag_service.rs
openhcl/hcl/: Cargo.toml
openhcl/hcl/src/: ioctl.rs  vmsa.rs
openhcl/ohcldiag-dev/: Cargo.toml
openhcl/ohcldiag-dev/src/: main.rs
openhcl/openhcl_attestation_protocol/: Cargo.toml
openhcl/openhcl_attestation_protocol/src/: vmgs.rs
openhcl/openhcl_boot/src/: boot_logger.rs  main.rs  sidecar.rs
openhcl/openvmm_hcl/: Cargo.toml
openhcl/openvmm_hcl_resources/src/: lib.rs
openhcl/product_policy/: Cargo.toml
openhcl/product_policy/src/: cwcow.rs  lib.rs  product_policy_helpers.rs  sivm.rs  tests.rs  uefi_security_policy.rs
openhcl/sidecar/: Cargo.toml
openhcl/tee_call/: Cargo.toml
openhcl/tee_call/src/: lib.rs
openhcl/underhill_attestation/: Cargo.toml
openhcl/underhill_attestation/src/: hardware_key_sealing.rs  jwt.rs  key_protector.rs  lib.rs  test_helpers.rs  vmgs.rs
openhcl/underhill_attestation/test_data/: valid_jwt
openhcl/underhill_core/: Cargo.toml
openhcl/underhill_core/src/: lib.rs  measured_product_policy.rs  nvme_manager.rs  options.rs  worker.rs
openhcl/underhill_crash/src/: lib.rs
openhcl/underhill_entry/: Cargo.toml  build.rs
openhcl/underhill_init/src/: lib.rs
openhcl/underhill_mem/src/: init.rs  lib.rs
openhcl/virt_mshv_vtl/src/: lib.rs
opentmk/: Cargo.toml
openvmm/hvlite_defs/src/: config.rs
openvmm/membacking/src/: region_manager.rs
openvmm/openvmm_core/: Cargo.toml
openvmm/openvmm_defs/src/: config.rs
openvmm/openvmm_entry/: Cargo.toml
openvmm/openvmm_entry/src/: cli_args.rs  lib.rs  repl.rs  storage_builder.rs
openvmm/openvmm_resources/: Cargo.toml
petri/: Cargo.toml
petri/incubator/: Cargo.toml
petri/incubator/profiles/: aarch64-pcie.toml  aarch64-tcg-pcie.toml
petri/incubator/src/: lib.rs  main.rs  path_mapping.rs  profile.rs  qemu.rs  run.rs
petri/initrd_cpio/: Cargo.toml
petri/logview/: .npmrc  README.md  package-lock.json  package.json
petri/src/: lib.rs  requirements.rs  test.rs  tracing.rs  worker.rs
repo_support/: investigate_ci.py
scripts/: grant-privilege.ps1  setup-alpine.sh  setup-ubuntu.sh
support/guid/: Cargo.toml
support/sev_guest_device/: Cargo.toml
support/sparse_mmap/: Cargo.toml
support/sparse_mmap/fuzz/: fuzz_sparse_mmap.rs
support/sparse_mmap/src/: lib.rs  unix.rs  windows.rs
support/unix_socket/: Cargo.toml
support/unix_socket/src/: lib.rs  unix.rs
tmk/simple_tmk/: Cargo.toml
tmk/tmk_protocol/: Cargo.toml
vm/: README.md
vm/chipset_device/: Cargo.toml
vm/chipset_device_fuzz/: Cargo.toml
vm/devices/iommu/iommu_common/: Cargo.toml
vm/devices/iommu/iommu_common/src/: lib.rs
vm/devices/tpm/tpm_lib/: Cargo.toml
vm/devices/tpm/tpm_lib/src/: lib.rs
vm/loader/: Cargo.toml
vm/loader/igvmfilegen_config/: Cargo.toml
vm/loader/igvmfilegen_config/src/: lib.rs
vm/telemetry/: Cargo.toml
vmm_core/src/: acpi_builder.rs  device_builder.rs
vmm_core/virt_support_apic/: Cargo.toml
vmm_core/vm_manifest_builder/: Cargo.toml
vmm_tests/vmm_tests/: Cargo.toml
(+452 files in other folders)
