# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "incubator"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
crossterm = { workspace = true, features = ["windows"] }
futures.workspace = true
futures-concurrency.workspace = true
initrd_cpio.workspace = true
mesh.workspace = true
pal_async.workspace = true
pipette_client.workspace = true
serde = { workspace = true, features = ["derive"] }
tempfile.workspace = true
toml_edit = { workspace = true, features = ["serde"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }

[lints]
workspace = true
