# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "sparse_mmap"
edition.workspace = true
rust-version.workspace = true

[dependencies]
pal.workspace = true
trycopy.workspace = true

thiserror.workspace = true
zerocopy.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(all(unix, not(target_os = "linux")))'.dependencies]
getrandom.workspace = true

[target.'cfg(windows)'.dependencies]
parking_lot.workspace = true
windows-sys = { workspace = true, features = [
    "Wdk_System_SystemServices",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
]}

[lints]
workspace = true
