# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "igvmfilegen_config"
edition.workspace = true
rust-version.workspace = true

[dependencies]
product_policy = { workspace = true, features = ["manifest"] }
serde = { workspace = true, features = ["std", "derive"] }

[dev-dependencies]
serde_json = { workspace = true, features = ["std"] }

[lints]
workspace = true
