# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "iommu_common"
edition.workspace = true
rust-version.workspace = true

[dependencies]
guestmem.workspace = true
parking_lot.workspace = true
pci_core.workspace = true
thiserror.workspace = true

[lints]
workspace = true
